UtBS S2: add dehydration explanation to objective notes

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -227,6 +227,19 @@
 
             {TURNS_RUN_OUT}
 
+            [note]
+                description= _ "Your units become dehydrated during the day, losing hitpoints and damage when they are not on a water hex"
+            [/note]
+            [note]
+                description= _ "Units are refreshed at the start of your turn when they are on a water or oasis hex"
+            [/note]
+            [note]
+                description= _ "Healers can prevent dehydration from getting worse, but cannot heal it"
+            [/note]
+            [note]
+                description= _ "Healers are unable to heal adjacent units during the day"
+            [/note]
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
