--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -1648,7 +1648,15 @@
         [unit]
             side=1
             x,y=3,34
+#ifdef HARD
             hitpoints=19
+#endif
+#ifdef NORMAL
+            hitpoints=27
+#endif
+#ifdef EASY
+            hitpoints=33
+#endif
             facing=se
             animate=yes
 
@@ -1778,7 +1786,7 @@
         [/random_placement]
 
         [random_placement]
-            num_items={ON_DIFFICULTY 2 3 3}
+            num_items={ON_DIFFICULTY 1 2 2}
             variable=loc
             min_distance=3
             [filter_location]
@@ -1794,6 +1802,24 @@
         [/random_placement]
 
         {MODIFY_UNIT (type=Blood Bat) max_moves 4}
+
+        [random_placement]
+            num_items={ON_DIFFICULTY 2 3 3}
+            variable=loc
+            min_distance=3
+            [filter_location]
+                x,y=1-29,1-24
+                terrain=Uu,Uu^*
+                [not]
+                    [filter][/filter]
+                [/not]
+            [/filter_location]
+            [command]
+                {NOTRAIT_UNIT 3 "Giant Rat" $loc.x $loc.y}
+            [/command]
+        [/random_placement]
+
+        {MODIFY_UNIT (type=Giant Rat) max_moves 3}
 
         [random_placement]
             num_items=3
@@ -1812,23 +1838,7 @@
         [/random_placement]
 
         [random_placement]
-            num_items=3
-            variable=loc
-            min_distance=3
-            [filter_location]
-                x,y=1-29,1-24
-                terrain=Uu,Uu^*
-                [not]
-                    [filter][/filter]
-                [/not]
-            [/filter_location]
-            [command]
-                {NOTRAIT_UNIT 3 "Giant Rat" $loc.x $loc.y}
-            [/command]
-        [/random_placement]
-
-        [random_placement]
-            num_items=8
+            num_items=10
             variable=loc
             min_distance=3
             [filter_location]
