UtBS S11: trapped merman does not require upkeep from side 2

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
@@ -311,6 +311,11 @@
             random_traits=no
             max_moves=1
             ai_special=guardian
+            [modifications]
+                {TRAIT_LOYAL}
+                {TRAIT_QUICK}
+            [/modifications]
+            {IS_LOYAL}
         [/unit]
 
         # recall heroes
