UtBS S11: undead guard is now loyal

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
@@ -464,6 +464,10 @@
             side=3
             x,y=25,20
             ai_special=guardian
+            [modifications]
+                {TRAIT_LOYAL}
+            [/modifications]
+            {IS_LOYAL}
         [/unit]
 
         [unit]
