--- a/data/core/units/monsters/Fire_Dragon.cfg
+++ b/data/core/units/monsters/Fire_Dragon.cfg
@@ -3,6 +3,7 @@
     id=Fire Dragon
     name= _ "Fire Dragon"
     race=monster
+    profile="portraits/monsters/fire-dragon.png"
     # workaround to cut the transparent part when displayed in the help
     image="units/monsters/fire-dragon.png~CROP(3,0,154,154)"
     [standing_anim]
