THoT S1: add dialogue

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg
@@ -136,10 +136,10 @@
             message= _ "What is this? Their vanquished leader wears a cloak-pin of dwarvish make. And it bears a loremaster’s emblem. Why would an orc be carrying metalwork of dwarvish make?"
         [/message]
 
-		[scroll_to]
-			x,y=45,29
-		[/scroll_to]
-		
+        [scroll_to]
+            x,y=45,29
+        [/scroll_to]
+
         [unit]
             x,y=45,29
             id=Movrur
@@ -150,9 +150,9 @@
             [/modifications]
             side=1
             type=Dwarvish Masked Steelclad
-			profile=portraits/maskeddwarf3.png
+            profile=portraits/maskeddwarf3.png
             random_traits=no
-			animate=yes
+            animate=yes
         [/unit]
 
         [message]
@@ -182,7 +182,17 @@
 
         [message]
             speaker=Aiglondur
-            message= _ "Kal Kartha! In that case, we had best consult Lord Hamel. We may yet be able to send you some aid against these orcish marauders."
+            message= _ "Kal Kartha, the hold of the forges and the olden birthplace of our kind? That Kal Kartha? We have not heard from you in years! It was thought that your hold was lost to the orcs long ago."
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "Aye, our hold was once overrun by orcs, but in recent times, we have begun to clear them out and reclaim the lands that were once ours. However, as you saw here, our troubles with the orcs are far from over."
+        [/message]
+
+        [message]
+            speaker=Aiglondur
+            message= _ "In that case, we had best consult Lord Hamel. We may yet be able to send you some aid against these orcish marauders."
         [/message]
 
         [message]
