THoT S2: modify dialogue

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg
@@ -110,7 +110,7 @@
 
         [message]
             speaker=Movrur
-            message= _ "Nay, it was merely bad luck. We had just uncovered a magma bed for a new forge, one hot enough to reforge the ruined Hammer of Thursagan. We brought a loremaster to survey the site, but orcs ambushed us not long after he arrived."
+            message= _ "Nay, it was merely... bad luck. We had just uncovered a magma bed for a new forge, one hot enough to reforge the ruined Hammer of Thursagan. We brought a loremaster to survey the site, but orcs ambushed us not long after he arrived."
         [/message]
 
         [message]
@@ -120,12 +120,12 @@
 
         [message]
             speaker=Angarthing
-            message= _ "Aye. The very tool with which our greatest runesmith made the Sceptre of Fire. But it is ancient, far older than Thursagan; he was but the last to wield it, and our oldest histories hint that this very hammer was used to forge the dwarves themselves in the heart of the earth."
+            message= _ "Aye. The very tool with which our greatest runesmith made the Sceptre of Fire. But it is ancient, far older than Thursagan; he was but the last to wield it, and our oldest histories hint that this very hammer was used to forge the dwarves themselves in the heart of the deepest forges beneath Kal Kartha."
         [/message]
 
         [message]
             speaker=Movrur
-            message= _ "We of Kal Kartha recovered the pieces from the Caverns of Flame long ago, but were unable to repair the artifact. The consequences of the Hammer’s ruination have thus been irreparable."
+            message= _ "We recovered the pieces from the Caverns of Flame long ago, but were unable to repair the artifact. The consequences of the Hammer’s ruination have thus been irreparable."
         [/message]
 
         [message]
@@ -210,7 +210,7 @@
 
         [message]
             speaker=Movrur
-            message= _ "As the orcs recently slew one of our invaluable loremasters, we would welcome the expertise of one of our kin from Knalga."
+            message= _ "As the orcs recently slew one of our invaluable loremasters, we would welcome the wisdom of one of our kin from Knalga."
         [/message]
 
         [message]
