THoT S4: modify turn limit

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/04_High_Pass.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/04_High_Pass.cfg
@@ -4,7 +4,7 @@
     id=04_High_Pass
     name= _ "High Pass"
     map_data="{campaigns/The_Hammer_of_Thursagan/maps/04_High_Pass.map}"
-    {TURNS 22 18 12}
+    {TURNS 22 20 18}
     next_scenario=05_Fear
     victory_when_enemies_defeated=no
 
@@ -297,7 +297,7 @@
 
         [message]
             speaker=Aiglondur
-            message= _ "I do hope so, for the sake of peace and the safety of our people. For now, however, we must content ourselves with pressing onward toward Kal Kartha."
+            message= _ "I hope so, for the sake of peace and the safety of our people. For now, however, we must content ourselves with pressing onward toward Kal Kartha."
         [/message]
 
         [endlevel]
