THoT S5: rebalancing tweaks

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Fear.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Fear.cfg
@@ -4,11 +4,11 @@
     id=05_Fear
     name= _ "Fear"
     map_data="{campaigns/The_Hammer_of_Thursagan/maps/05_Fear.map}"
-    {TURNS 30 25 20}
+    {TURNS 26 23 20}
     next_scenario=06_Forbidden_Forest
     victory_when_enemies_defeated=no
 
-    {DEFAULT_SCHEDULE}
+    {MIDNIGHT}
 
     {SCENARIO_MUSIC       breaking_the_chains.ogg}
     {EXTRA_SCENARIO_MUSIC knalgan_theme.ogg}
@@ -605,7 +605,7 @@
         [/kill]
 
         [delay]
-            time=750
+            time=400
         [/delay]
 
         [message]
@@ -638,6 +638,18 @@
                     message= _ "These look as if they are of dwarven make! Movrur, what is the meaning of this?"
                 [/message]
             [/then]
+            [elseif]
+                [variable]
+                    name=second_unit.id
+                    equals=Angarthing
+                [/variable]
+                [then]
+                    [message]
+                        speaker=Angarthing
+                        message= _ "In his haste to escape, it seems like the orc dropped some coins. It looks as if they are of dwarven make! Movrur, what is the meaning of this?"
+                    [/message]
+                [/then]
+            [/elseif]
             [else]
                 [message]
                     speaker=second_unit
