THoT S7: rebalancing orc gold

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/07_The_Siege_of_Kal_Kartha.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/07_The_Siege_of_Kal_Kartha.cfg
@@ -76,7 +76,8 @@
 #ifdef HARD
         recruit=Orcish Archer, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman, Goblin Impaler
 #endif
-        {GOLD 160 200 240}
+        {GOLD 130 170 200}
+        {INCOME 6 8 10}
         team_name=orcs
         user_team_name=_"Orcs"
         {FLAG_VARIANT6 ragged}
@@ -120,7 +121,8 @@
         side=4
         controller=ai
         recruit=Orcish Archer, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Spearman
-        {GOLD 160 200 240}
+        {GOLD 130 170 200}
+        {INCOME 6 8 10}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -161,7 +163,8 @@
         side=5
         controller=ai
         recruit=Orcish Archer, Orcish Grunt, Wolf Rider, Orcish Warrior, Goblin Spearman
-        {GOLD 160 200 240}
+        {GOLD 130 170 200}
+        {INCOME 6 8 10}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -371,7 +374,7 @@
 
         [message]
             speaker=Dulcatulos
-            message=_"Right, right. These things are for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well. We will speak again."
+            message=_"As you say. These things are for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well. We will speak again."
         [/message]
 
         [endlevel]
