TSG S1: create Sir Gerrick if player skips scenario with debug

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -779,4 +779,33 @@
             {NEW_GOLD_CARRYOVER 40}
         [/endlevel]
     [/event]
+
+    # this is present so that if you skip the scenario with debug, you will still have Sir Gerrick
+    [event]
+        name=victory
+
+        [if]
+            [not]
+                [have_unit]
+                    id=Sir Gerrick
+                [/have_unit]
+            [/not]
+            [then]
+                [unit]
+                    side=1
+                    type=Infantry Lieutenant
+                    id=Sir Gerrick
+                    name= _ "Sir Gerrick"
+                    unrenamable=yes
+                    profile=portraits/sir-gerrick.png
+                    {IS_HERO}
+                    x,y=10,9
+                    [modifications]
+                        {TRAIT_LOYAL}
+                        {TRAIT_RESILIENT}
+                    [/modifications]
+                [/unit]
+            [/then]
+        [/if]
+    [/event]
 [/scenario]
