--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -457,6 +457,31 @@ _f, _f, Re, _f
                 [/object]
             [/modifications]
         )}
+
+        # if the player used debug to get here, create afalas for them
+        [if]
+            [not]
+                [have_unit]
+                    id=Urza Afalas
+                [/have_unit]
+            [/not]
+            [then]
+                [unit]
+                    side=1
+                    type=Outlaw
+                    id=Urza Afalas
+                    name= _ "Urza Afalas"
+                    unrenamable=yes
+                    profile=portraits/urza-afalas.png
+                    {IS_HERO}
+                    x,y=recall,recall
+                    random_traits=no
+                    [modifications]
+                        {TRAIT_LOYAL}
+                    [/modifications]
+                [/unit]
+            [/then]
+        [/if]
     [/event]
 
     [event]
