TSG S6b: kill elves on side 1 if player got to this scenario with debug

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -482,6 +482,14 @@ _f, _f, Re, _f
                 [/unit]
             [/then]
         [/if]
+
+        # also get rid of elves
+        [kill]
+            side=1
+            race=elf
+            animate=no
+            fire_event=no
+        [/kill]
     [/event]
 
     [event]
