ANL: scale image in menu to same size as the others
[ci skip]

--- a/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
@@ -149,7 +149,7 @@
 
 #define SHARE_WARFARE_KNOWLEDGE_OPTION TARGET_SIDE
     [option]
-        image = "wesnoth-icon.png"
+        image = "wesnoth-icon.png~SCALE(72,72)"
         label = $diplo_msg[{TARGET_SIDE}].warfare
         [show_if]
             [variable]
