--- a/data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg
@@ -174,7 +174,7 @@ Study Progress: $player_$side_number|.mining.progress|/$player_$side_number|.min
                         #Warfare
 
                         [option]
-                            image = "wesnoth-icon.png"
+                            image = "wesnoth-icon.png~SCALE(72,72)"
                             label =  _ "<span color='green'>Warfare</span>
 Allows you to recruit a new type of unit
 Study Progress: $player_$side_number|.warfare.progress|/$player_$side_number|.warfare.target"
