--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -3,7 +3,7 @@
     id=multiplayer_A_New_Land
     name= _ "4p — A New Land"
     map_data="{multiplayer/maps/4p_A_New_Land.map}"
-    description= _ "This 4p survival scenario allows you to construct buildings and terraform the land. Use map settings. The recommended starting gold is 100."
+    description= _ "This 4p survival scenario allows you to construct buildings and terraform the land. The recommended starting gold is 100."
     experience_modifier=70%
     force_lock_settings=yes
     define=MULTIPLAYER_A_NEW_LAND_LOAD
@@ -28,12 +28,11 @@
     [/story]
 
     [event]
-        name="start"
+        name=prestart
         [objectives]
-            side=0
-            summary="<small>" + _ "Right-click on your leader during your turn for help" + "</small>" # wmllint: no spellcheck
+            summary="<small>" + _ "Right-click on your leader for help" + "</small>" # wmllint: no spellcheck
             [objective]
-                description= _ "You must survive until turn 25."
+                description= _ "You must survive until turn 25"
                 condition=win
             [/objective]
         [/objectives]
