DW S3: dialogue cleanup

--- a/data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg
+++ b/data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg
@@ -207,17 +207,17 @@
 
         [message]
             speaker=Gashnok
-            message= _ "Smells like lots of death in the south. There must be a good feast near that merman town."
+            message= _ "Smells like lots of death in the south near that merman town. Hey, Vrunt, you think the wolves like eatin’ merfish?"
         [/message]
 
         [message]
             speaker=Vrunt
-            message= _ "Let’s hope those wild wolves over there don’t get to it before we do."
+            message= _ "Talking or not, fish are fish. Wolves’ll probably love them. Besides, look there! Some fresh ones are coming our way!"
         [/message]
 
         [message]
             speaker=Gashnok
-            message= _ "Hold on...It looks like a better feast is coming our way! Fresh fish, boys! Go get it."
+            message= _ "They look mighty good to me. Might even have a taste later, myself. Let’s get ’em, boys!"
         [/message]
 
         [message]
