--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
@@ -205,12 +205,13 @@
 
         [message]
             speaker=Tan-Rarbag
-            message= _ "So, <i>human</i>, care to make your final stand?"
+                # po: meat is a derogatory term for humans used by orcs and also is a subtle reference to orcs eating humans opportunistically
+            message= _ "Run, meat, run! Sooner or later, you will tire and our wolves will hunt you down!"
         [/message]
 
         [message]
             speaker=Tan-Erang
-            message= _ "Die! Die! Die!"
+            message= _ "The meat will die! Die! Die! Die!"
         [/message]
 
         [message]
