tips: Don't use dev terms
https://forums.wesnoth.org/viewtopic.php?f=6&t=49683

--- a/data/tips.cfg
+++ b/data/tips.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth
 
 [tip]
-    text= _ "Use the map editor's <i>Areas</i> menu to define regions later addressed by event or ai coding."
+    text= _ "Use the map editor's <i>Areas</i> menu to define regions later addressed by event or AI coding."
     source= _ "<i>― The Wesnoth Design Guide</i>"
 [/tip]
 [tip]
@@ -9,7 +9,7 @@
     source= _ "<i>― The Wesnoth Design Guide</i>"
 [/tip]
 [tip]
-    text= _ "Scenarios saved from the editor in their default folder can be selected in the mp create screen's <i>User Scenarios</i> section."
+    text= _ "Scenarios saved from the editor in their default folder can be selected in the <i>User Scenarios</i> section of the Multiplayer ""Create Game"" screen."
     source= _ "<i>― The Wesnoth Design Guide</i>"
 [/tip]
 [tip]
