Hit stats: Show number of hits/misses inflicted overall in statistics dialog.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -108,9 +108,9 @@
 	[/listbox]
 #enddef
 
-#define _GUI_DAMAGE_STATS_LIST
+#define _GUI_DAMAGE_STATS_LIST top_left_label overall_id colid_type colid_overall colid_this_turn
 	[listbox]
-		id = "stats_list_damage"
+		id = {overall_id}
 		definition = "default"
 
 		horizontal_scrollbar_mode = "never"
@@ -126,7 +126,7 @@
 
 					[label]
 						definition = "default_small"
-						label = _ "Damage"
+						label = {top_left_label}
 						linked_group = "type"
 					[/label]
 				[/column]
@@ -181,7 +181,7 @@
 									horizontal_grow = true
 
 									[label]
-										id = "damage_type"
+										id = {colid_type}
 										definition = "default"
 										linked_group = "type"
 									[/label]
@@ -194,7 +194,7 @@
 									horizontal_grow = true
 
 									[label]
-										id = "damage_overall"
+										id = {colid_overall}
 										definition = "default_small"
 										linked_group = "detail"
 									[/label]
@@ -207,7 +207,7 @@
 									horizontal_grow = true
 
 									[label]
-										id = "damage_this_turn"
+										id = {colid_this_turn}
 										definition = "default_small"
 										linked_group = "cost"
 									[/label]
@@ -481,7 +481,21 @@
 											horizontal_grow = true
 											vertical_grow = true
 
-											{_GUI_DAMAGE_STATS_LIST}
+											{_GUI_DAMAGE_STATS_LIST (_ "Damage") stats_list_damage damage_type damage_overall damage_this_turn}
+										[/column]
+
+									[/row]
+
+									[row]
+										grow_factor = 1
+
+										[column]
+											border = "all"
+											border_size = 5
+											horizontal_grow = true
+											vertical_grow = true
+
+											{_GUI_DAMAGE_STATS_LIST (_ "Hits") stats_list_hits hits_type hits_overall hits_this_turn}
 										[/column]
 
 									[/row]
