--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -103,9 +103,6 @@
     # This macro places the doors and adds the door-opening event
     {MANOR_DOORS 1,3}
 
-    # book
-    {PLACE_IMAGE items/book5.png 12 8}
-
     # scenery
 
     {PLACE_IMAGE items/dragonstatue.png 23 16}
@@ -188,6 +185,12 @@
 
     [event]
         name=prestart
+
+        # place the book's image
+        [item]
+            location_id=book_start
+            image="items/book5.png"
+        [/item]
 
         [objectives]
             side=1
@@ -491,8 +494,10 @@
                         greater_than=4
                     [/variable]
                     [then]
-                        {VARIABLE dest.x 12}
-                        {VARIABLE dest.y 8}
+                        [store_locations]
+                            location_id=book_start
+                            variable=dest
+                        [/store_locations]
                     [/then]
                     [else]
                         {VARIABLE dest.x 16}
@@ -539,6 +544,45 @@
         [/unstore_unit]
 
         {CLEAR_VARIABLE stored_Darken,dest,darken_goto,index}
+    [/event]
+
+    # If there are no enemies, then DV's troops won't move; this event unblocks the book if necessary.
+    [event]
+        name=side 3 turn refresh
+        first_time_only=no
+        [filter_condition]
+            [variable]
+                name=hasBook
+                equals=none
+            [/variable]
+            [have_unit]
+                # This won't be DV himself, otherwise hasBook is not none.
+                side=3
+                [filter_location]
+                    location_id=book_start
+                [/filter_location]
+            [/have_unit]
+            [not]
+                [have_unit]
+                    # Ignore side=4, the city guard is (hopefully for the player) not near the book.
+                    side=2
+                    [filter_vision]
+                        # There are 3 entrance rooms, one of them might still have all of its doors shut.
+                        side=3
+                    [/filter_vision]
+                [/have_unit]
+            [/not]
+        [/filter_condition]
+        [modify_unit]
+            [filter]
+                [filter_location]
+                    location_id=book_start
+                [/filter_location]
+            [/filter]
+            # Somewhere inside the tunnel, but out-of-the-way for the hexes that Malin must move to.
+            goto_x=29
+            goto_y=2
+        [/modify_unit]
     [/event]
 
     # pursuer spawns
@@ -816,7 +860,9 @@ Existence churns and the soul is reborn into endless night.</i>"
         [filter]
             side=1
             canrecruit=no
-            x,y=12,8
+            [filter_location]
+                location_id=book_start
+            [/filter_location]
         [/filter]
         [filter_condition]
             [variable]
@@ -826,13 +872,17 @@ Existence churns and the soul is reborn into endless night.</i>"
         [/filter_condition]
 
         [message]
-            x,y=12,8
+            [filter_location]
+                location_id=book_start
+            [/filter_location]
             message=_ "I have found the book, master!"
         [/message]
 
         [if]
             [have_unit]
-                x,y=12,8
+                [filter_location]
+                    location_id=book_start
+                [/filter_location]
                 race=undead
             [/have_unit]
             [then]
@@ -857,7 +907,9 @@ Existence churns and the soul is reborn into endless night.</i>"
         name=moveto
         [filter]
             id=Malin Keshar
-            x,y=12,8
+            [filter_location]
+                location_id=book_start
+            [/filter_location]
         [/filter]
         [filter_condition]
             [variable]
@@ -867,7 +919,7 @@ Existence churns and the soul is reborn into endless night.</i>"
         [/filter_condition]
 
         [remove_item]
-            x,y=12,8
+            location_id=book_start
         [/remove_item]
 
         {VARIABLE hasBook Malin}
@@ -936,7 +988,9 @@ Existence churns and the soul is reborn into endless night.</i>"
         name=moveto
         [filter]
             id=Darken Volk
-            x,y=12,8
+            [filter_location]
+                location_id=book_start
+            [/filter_location]
         [/filter]
         [filter_condition]
             [variable]
@@ -946,16 +1000,18 @@ Existence churns and the soul is reborn into endless night.</i>"
         [/filter_condition]
 
         [remove_item]
-            x,y=12,8
+            location_id=book_start
         [/remove_item]
 
         {VARIABLE hasBook Darken}
 
+        # A second, non-silent, update triggers when DV moves again (next turn, he's still set to go to the book_start hex this turn).
         [objectives]
             side=1
+            silent=yes
             [objective]
                 condition=win
-                description= _ "Escape the manor"
+                description= _ "Escape via the tunnel in the northeast cellar"
             [/objective]
             [objective]
                 condition=lose
@@ -993,6 +1049,28 @@ Existence churns and the soul is reborn into endless night.</i>"
                 speaker=Malin Keshar
                 message= _ "Wait, you aren’t leaving me behind, are you?"
             [/message]
+
+            [objectives]
+                side=1
+                [objective]
+                    condition=win
+                    description= _ "Escape the manor (Malin reaches the tunnel in the northeast cellar before Darken Volk)"
+                [/objective]
+                [objective]
+                    condition=lose
+                    description= _ "Darken Volk reaches the tunnel before Malin does"
+                [/objective]
+                [objective]
+                    condition=lose
+                    description= _ "Death of Malin Keshar"
+                [/objective]
+                [objective]
+                    condition=lose
+                    description= _ "Death of Darken Volk"
+                [/objective]
+
+                {TURNS_RUN_OUT}
+            [/objectives]
         [/event]
 
         [event]
