Hit stats: Show the probability of being at least this far from the mean.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -197,6 +197,7 @@
 										id = {colid_overall}
 										definition = "default_small"
 										linked_group = "detail"
+										use_markup = true
 									[/label]
 								[/column]
 
@@ -210,6 +211,7 @@
 										id = {colid_this_turn}
 										definition = "default_small"
 										linked_group = "cost"
+										use_markup = true
 									[/label]
 								[/column]
 
