Stats dialog: Split the "1/2 3%" column into two separate columns, one for "1/2" and one for "3%".
The percentages align vertically now, but the intercolumn spacing is
still somewhat hacky.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -150,8 +150,32 @@
 
 					[label]
 						definition = "default_small"
+						label = _ "" # percentage
+						linked_group = "detail"
+					[/label]
+				[/column]
+
+				[column]
+					horizontal_grow = true
+					border = "all"
+					border_size = 5
+
+					[label]
+						definition = "default_small"
 						label = _ "This Turn"
 						linked_group = "cost"
+					[/label]
+				[/column]
+
+				[column]
+					horizontal_grow = true
+					border = "all"
+					border_size = 5
+
+					[label]
+						definition = "default_small"
+						label = _ "" # percentage
+						linked_group = "detail"
 					[/label]
 				[/column]
 
@@ -197,6 +221,20 @@
 										id = {colid_overall}
 										definition = "default_small"
 										linked_group = "detail"
+									[/label]
+								[/column]
+
+								[column]
+									grow_factor = 0
+									border = "all"
+									border_size = 5
+									horizontal_grow = false
+
+									[label]
+										id = "overall_percent"
+										definition = "default_small"
+										linked_group = "detail"
+										text_alignment = "right"
 										use_markup = true
 									[/label]
 								[/column]
@@ -211,6 +249,20 @@
 										id = {colid_this_turn}
 										definition = "default_small"
 										linked_group = "cost"
+									[/label]
+								[/column]
+
+								[column]
+									grow_factor = 0
+									border = "all"
+									border_size = 5
+									horizontal_grow = false
+
+									[label]
+										id = "this_turn_percent"
+										definition = "default_small"
+										linked_group = "detail"
+										text_alignment = "right"
 										use_markup = true
 									[/label]
 								[/column]
