Stats dialog: Add tooltips to the damage and hits tables.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -108,7 +108,7 @@
 	[/listbox]
 #enddef
 
-#define _GUI_DAMAGE_STATS_LIST top_left_label overall_id colid_type colid_overall colid_this_turn
+#define _GUI_DAMAGE_STATS_LIST top_left_label overall_id colid_type colid_overall colid_this_turn ratio_tooltip percent_tooltip
 	[listbox]
 		id = {overall_id}
 		definition = "default"
@@ -221,6 +221,7 @@
 										id = {colid_overall}
 										definition = "default_small"
 										linked_group = "detail"
+										tooltip = {ratio_tooltip}
 									[/label]
 								[/column]
 
@@ -236,6 +237,7 @@
 										linked_group = "detail"
 										text_alignment = "right"
 										use_markup = true
+										tooltip = {percent_tooltip}
 									[/label]
 								[/column]
 
@@ -249,6 +251,7 @@
 										id = {colid_this_turn}
 										definition = "default_small"
 										linked_group = "cost"
+										tooltip = {ratio_tooltip}
 									[/label]
 								[/column]
 
@@ -264,6 +267,7 @@
 										linked_group = "detail"
 										text_alignment = "right"
 										use_markup = true
+										tooltip = {percent_tooltip}
 									[/label]
 								[/column]
 
@@ -535,7 +539,10 @@
 											horizontal_grow = true
 											vertical_grow = true
 
-											{_GUI_DAMAGE_STATS_LIST (_ "Damage") stats_list_damage damage_type damage_overall damage_this_turn}
+											{_GUI_DAMAGE_STATS_LIST
+											 (_ "Damage") stats_list_damage damage_type damage_overall damage_this_turn
+											 (_"stats dialog^Amount of hitpoints (actual / expected)")
+											 (_"stats dialog^Ratio of actual to expected")}
 										[/column]
 
 									[/row]
@@ -549,7 +556,10 @@
 											horizontal_grow = true
 											vertical_grow = true
 
-											{_GUI_DAMAGE_STATS_LIST (_ "Hits") stats_list_hits hits_type hits_overall hits_this_turn}
+											{_GUI_DAMAGE_STATS_LIST
+											 (_ "Hits") stats_list_hits hits_type hits_overall hits_this_turn
+											 (_"stats dialog^Number of hits (actual / expected)")
+											 (_"stats dialog^<i>A priori</i> probability of getting this result or a more extreme one")}
 										[/column]
 
 									[/row]
