add loyal overlay to loyal trait definition and add hero trait

--- a/data/core/macros/traits.cfg
+++ b/data/core/macros/traits.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-help
 # Traits for the [modifications] clause of SingleWML descriptions
 
-#define TRAIT_LOYAL
+#define TRAIT_LOYAL_OVERLAY OVERLAY
     # Units with trait Loyal have no upkeep.
     [trait]
         id=loyal
@@ -14,7 +14,21 @@ During campaigns, certain units may opt to join the player’s forces of their o
         [effect]
             apply_to=loyal
         [/effect]
+		[effect]
+            apply_to=overlay
+			add={OVERLAY}
+        [/effect]
     [/trait]
+#enddef
+
+#define TRAIT_LOYAL
+    # Units with trait Loyal have no upkeep.
+	{TRAIT_LOYAL_OVERLAY misc/loyal-icon.png}
+#enddef
+
+#define TRAIT_HERO
+    # Units with trait Loyal have no upkeep.
+	{TRAIT_LOYAL_OVERLAY misc/hero-icon.png}
 #enddef
 
 #define TRAIT_UNDEAD
