--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -134,28 +134,24 @@
         find_in=illuminated_locations
 
         # Schedule from morning to 2nd night, with adjusted red,green,blue and illumination image.
-        [+time]
+        [time]
             image=misc/time-schedules/default/schedule-secondwatch.png~BLIT(misc/tod-bright.png)
             lawful_bonus=0
         [/time]
-        {MORNING}
-        [+time]
+        [time]
             image=misc/time-schedules/default/schedule-dawn.png~BLIT(misc/tod-bright.png)
             lawful_bonus=25
         [/time]
         {MORNING}
         {AFTERNOON}
-        {AFTERNOON}
-        [+time]
+        [time]
             image=misc/time-schedules/default/schedule-dusk.png~BLIT(misc/tod-bright.png)
             lawful_bonus=25
         [/time]
-        {DAWN}
-        [+time]
+        [time]
             image=misc/time-schedules/default/schedule-firstwatch.png~BLIT(misc/tod-bright.png)
             lawful_bonus=0
         [/time]
-        {DAWN}
     [/time_area]
 #enddef
 
