--- a/data/campaigns/The_South_Guard/_main.cfg
+++ b/data/campaigns/The_South_Guard/_main.cfg
@@ -16,9 +16,9 @@
 
     icon="data/campaigns/The_South_Guard/images/deoran/horseman-commander-defend.png"
     image="data/campaigns/The_South_Guard/images/campaign_image.png"
-    description= _ "A young Knight, Deoran, is dispatched to take command of the South Guard.
+    description= _ "A young knight, Deoran, is dispatched to the southern Wesnoth province of Kerlath to investigate the ravaged towns at the border. Thrust quickly into a hapless conflict against marauding bandits, Deoran must rally the remaining men of the derelict South Guard to defend his country.
 
-Note: This campaign is designed as an introduction to Wesnoth. The ‘Civilian’ difficulty level is aimed at first-time players.
+This campaign is designed as an introduction to Wesnoth. The ‘Civilian’ difficulty level is aimed at first-time players.
 
 " + _"(Rookie level, 9 scenarios.)"
 
