--- a/data/campaigns/Descent_Into_Darkness/_main.cfg
+++ b/data/campaigns/Descent_Into_Darkness/_main.cfg
@@ -20,7 +20,7 @@
     {CAMPAIGN_DIFFICULTY NORMAL "units/undead-necromancers/dark-sorcerer.png~RC(magenta>black)" ( _ "Evoker") ( _ "Challenging")} {DEFAULT_DIFFICULTY}
     {CAMPAIGN_DIFFICULTY HARD   "units/undead-necromancers/lich.png~RC(magenta>black)" ( _ "Summoner") ( _ "Difficult")}
 
-    description=_ "Learn the dark arts of necromancy in order to save your people from an orcish incursion.
+    description=_ "The northern frontier town of Parthyn is annually raided by neighboring tribes of orcs. Malin Keshar, an outcast mage, seeks to defend his home and wreak vengeance on the orcs by any means necessary, even if it means sacrificing his own soul in the process.
 
 " + _"(Intermediate level, 12 scenarios.)"
 
