TSG S8b: update comment on time areas

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -133,7 +133,7 @@
     [time_area]
         find_in=illuminated_locations
 
-        # Schedule from morning to 2nd night, with adjusted red,green,blue and illumination image.
+        # Schedule from 2nd watch to 1st watch with illumination (both images and proper lawful bonuses)
         {SECOND_WATCH}
         [+time]
             image=misc/time-schedules/default/schedule-secondwatch.png~BLIT(misc/tod-bright.png)
