replace overlays by persisten_overlay for LOYAL and IS_HERO

--- a/data/core/macros/image-utils.cfg
+++ b/data/core/macros/image-utils.cfg
@@ -17,18 +17,18 @@
 
 #define IS_HERO
     # Embed this into a unit declaration to add a hero icon to the unit.
-    overlays="misc/hero-icon.png"
+    persistent_overlay="misc/hero-icon.png"
     ellipse="misc/ellipse-hero"
 #enddef
 
 #define IS_LOYAL
     # Embed this into a unit declaration to add a loyalty icon to the unit.
-    overlays="misc/loyal-icon.png"
+     persistent_overlay="misc/loyal-icon.png"
 #enddef
 
 #define IS_EXPENDABLE_LEADER
     # Embed this into a unit declaration to add an expendable leader icon to the unit.
-    overlays="misc/leader-expendable.png"
+    persistent_overlay="misc/leader-expendable.png"
 #enddef
 
 #define NEW_JOURNEY X Y
@@ -175,10 +175,6 @@
 
 #define MAKE_HERO ID_STRING
     # Give an existing unit a hero overlay
-    [unit_overlay]
-        id={ID_STRING}
-        image=misc/hero-icon.png
-    [/unit_overlay]
     [object]
         silent=yes
         duration=forever
@@ -186,6 +182,11 @@
         [filter]
             id={ID_STRING}
         [/filter]
+        
+        [effect]
+            apply_to=persistent_overlay
+            persistent_overlay="misc/hero-icon.png"
+        [/effect]
 
         [effect]
             apply_to=ellipse
@@ -207,6 +208,11 @@
         [filter]
             id={ID_STRING}
         [/filter]
+        
+         [effect]
+            apply_to=persistent_overlay
+            persistent_overlay="misc/hero-icon.png"
+        [/effect]
 
         [effect]
             apply_to=ellipse
