add persistent_overlay for testing

--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -165,6 +165,10 @@
 				value=ellipse
 				{SIMPLE_KEY ellipse string}
 			[/case]
+            [case]
+				value=persistent_overlay
+				{SIMPLE_KEY persistent_overlay}
+			[/case]
 			[case]
 				value=halo
 				{SIMPLE_KEY halo string}
