--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -34,6 +34,7 @@
 	{SIMPLE_KEY usage ai_usage}
 	{SIMPLE_KEY zoc s_bool}
 	{SIMPLE_KEY ellipse string}
+    {SIMPLE_KEY persistent_overlay string}
 	{DEPRECATED_KEY ai_special string} # Not documented
 	{SIMPLE_KEY description t_string} # Not documented
 	{SIMPLE_KEY flag_icon string} # Not documented
