--- a/data/schema/units/types.cfg
+++ b/data/schema/units/types.cfg
@@ -11,6 +11,7 @@
 	{SIMPLE_KEY die_sound string}
 	{SIMPLE_KEY do_not_list bool}
 	{SIMPLE_KEY ellipse string}
+    {SIMPLE_KEY persistent_overlay string}
 	{SIMPLE_KEY experience int}
 	{SIMPLE_KEY flag_rgb string}
 	{SIMPLE_KEY gender string} # TODO: gender_list type
