--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -167,7 +167,7 @@
 			[/case]
             [case]
 				value=persistent_overlay
-				{SIMPLE_KEY persistent_overlay}
+				{SIMPLE_KEY persistent_overlay string}
 			[/case]
 			[case]
 				value=halo
