statistics: Coding style changes suggested by @jyrkive.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -150,7 +150,7 @@
 
 					[label]
 						definition = "default_small"
-						label = _ "" # percentage
+						label = "" # percentage
 						linked_group = "detail"
 					[/label]
 				[/column]
@@ -174,7 +174,7 @@
 
 					[label]
 						definition = "default_small"
-						label = _ "" # percentage
+						label = "" # percentage
 						linked_group = "detail"
 					[/label]
 				[/column]
