replace persistent_overlay by overlay

--- a/data/core/macros/image-utils.cfg
+++ b/data/core/macros/image-utils.cfg
@@ -17,18 +17,18 @@
 
 #define IS_HERO
     # Embed this into a unit declaration to add a hero icon to the unit.
-    persistent_overlay="misc/hero-icon.png"
+    overlay="misc/hero-icon.png"
     ellipse="misc/ellipse-hero"
 #enddef
 
 #define IS_LOYAL
     # Embed this into a unit declaration to add a loyalty icon to the unit.
-     persistent_overlay="misc/loyal-icon.png"
+    overlay="misc/loyal-icon.png"
 #enddef
 
 #define IS_EXPENDABLE_LEADER
     # Embed this into a unit declaration to add an expendable leader icon to the unit.
-    persistent_overlay="misc/leader-expendable.png"
+    overlay="misc/leader-expendable.png"
 #enddef
 
 #define NEW_JOURNEY X Y
