correxterror in hero macro

--- a/data/core/macros/image-utils.cfg
+++ b/data/core/macros/image-utils.cfg
@@ -177,6 +177,7 @@
     # Give an existing unit a hero overlay
     [object]
         silent=yes
+        id=make_hero
         duration=forever
 
         [filter]
@@ -184,8 +185,8 @@
         [/filter]
         
         [effect]
-            apply_to=persistent_overlay
-            persistent_overlay="misc/hero-icon.png"
+            apply_to=overlay_unique
+            overlay="misc/hero-icon.png"
         [/effect]
 
         [effect]
@@ -197,10 +198,10 @@
 
 #define UNMAKE_HERO ID_STRING
     # Remove the hero overlay from a unit
-    [remove_unit_overlay]
+    [remove_object]
         id={ID_STRING}
-        image=misc/hero-icon.png
-    [/remove_unit_overlay]
+        object_id=make_hero
+    [/remove_object]
     [object]
         silent=yes
         duration=forever
@@ -208,11 +209,6 @@
         [filter]
             id={ID_STRING}
         [/filter]
-        
-         [effect]
-            apply_to=persistent_overlay
-            persistent_overlay="misc/hero-icon.png"
-        [/effect]
 
         [effect]
             apply_to=ellipse
