--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -166,8 +166,8 @@
 				{SIMPLE_KEY ellipse string}
 			[/case]
             [case]
-				value=persistent_overlay
-				{SIMPLE_KEY persistent_overlay string}
+				value=overlay_unique
+				{SIMPLE_KEY overlay string}
 			[/case]
 			[case]
 				value=halo
