--- a/data/core/macros/unit-utils.cfg
+++ b/data/core/macros/unit-utils.cfg
@@ -78,7 +78,7 @@
         [modifications]
             {TRAIT_LOYAL}
         [/modifications]
-        overlays="misc/loyal-icon.png"
+        overlay="misc/loyal-icon.png"
     [/unit]
 #enddef
 
@@ -112,7 +112,7 @@
         [modifications]
             {TRAIT_LOYAL}
         [/modifications]
-        overlays="misc/loyal-icon.png"
+        overlay="misc/loyal-icon.png"
     [/unit]
 #enddef
 
@@ -178,7 +178,7 @@
     [+unit]
         upkeep=loyal
         # It's questionable whether we should do this here...
-        overlays="misc/loyal-icon.png"
+        overlay="misc/loyal-icon.png"
     [/unit]
 #enddef
 
