--- a/data/campaigns/Eastern_Invasion/utils/macros.cfg
+++ b/data/campaigns/Eastern_Invasion/utils/macros.cfg
@@ -79,7 +79,7 @@
                 set_type=arcane
             [/effect]
             [effect]
-                apply_to=overlay
+                apply_to=overlays
                 add="misc/arcane-icon.png"
             [/effect]
         [/object]
