--- a/data/core/macros/image-utils.cfg
+++ b/data/core/macros/image-utils.cfg
@@ -175,10 +175,10 @@
 
 #define MAKE_HERO ID_STRING
     # Give an existing unit a hero overlay
-    [unit_overlay]
+    [unit_simple_overlay]
         id={ID_STRING}
         image=misc/hero-icon.png
-    [/unit_overlay]
+    [/unit_simple_overlay]
     [object]
         silent=yes
         duration=forever
@@ -196,10 +196,10 @@
 
 #define UNMAKE_HERO ID_STRING
     # Remove the hero overlay from a unit
-    [remove_unit_overlay]
+    [remove_unit_simple_overlay]
         id={ID_STRING}
         image=misc/hero-icon.png
-    [/remove_unit_overlay]
+    [/remove_unit_simple_overlay]
     [object]
         silent=yes
         duration=forever
