--- a/data/campaigns/Delfadors_Memoirs/utils/sides.cfg
+++ b/data/campaigns/Delfadors_Memoirs/utils/sides.cfg
@@ -134,7 +134,7 @@
 
 #define CHANTAL_FOLLOWS_DELFADOR
     {MODIFY_UNIT (id=Chantal) canrecruit no}
-    {MODIFY_UNIT (id=Chantal) overlays "misc/hero-icon.png"}
+    {MODIFY_UNIT (id=Chantal) overlay "misc/hero-icon.png"}
     {MODIFY_UNIT (id=Chantal) ellipse "misc/ellipse-hero"}
     {MODIFY_UNIT (side=3) side 1}
     [modify_side]
