--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -196,6 +196,7 @@
         # Removes the loyal trait and other misc stuff
         {CLEAR_VARIABLE stored_Darken.modifications.trait[0]}
         {CLEAR_VARIABLE stored_Darken.overlays}
+        {CLEAR_VARIABLE stored_Darken.overlay}
         {CLEAR_VARIABLE stored_Darken.ellipse}
 
         [unstore_unit]
