--- a/data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg
+++ b/data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg
@@ -302,6 +302,7 @@
                     unrenamable=$this_item.unrenamable
                     canrecruit=$this_item.canrecruit
                     overlays=$this_item.overlays
+                    overlay=$this_item.overlay
                     random_traits=$this_item.random_traits
                     role=$this_item.role
 
