--- a/data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg
+++ b/data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg
@@ -48,7 +48,7 @@
         profile=portraits/relana.png
         facing=se
         side=2
-        overlays=misc/hero-icon.png
+        overlay=misc/hero-icon.png
         canrecruit=yes
         controller=ai
         [ai]
