--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -981,7 +981,7 @@
                         equals=Stalrag
                     [/variable]
                     [then]
-                        {VARIABLE this_item.overlays misc/loyal-icon.png}
+                        {VARIABLE this_item.overlay misc/loyal-icon.png}
                         [set_variables]
                             name=this_item.modifications
                             mode=replace
@@ -992,7 +992,7 @@
                         [/set_variables]
                     [/then]
                     [else]
-                        {VARIABLE this_item.overlays misc/hero-icon.png}
+                        {VARIABLE this_item.overlay misc/hero-icon.png}
                         {VARIABLE this_item.ellipse misc/ellipse-hero}
                         [set_variables]
                             name=this_item.modifications
