--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -867,6 +867,7 @@
             facing=$stored_necromancer.facing
             moves=$stored_necromancer.moves
             overlays=$stored_necromancer.overlays
+            overlay=$stored_necromancer.overlay
             hitpoints=$stored_necromancer.hitpoints
             canrecruit=$stored_necromancer.canrecruit
             attacks_left=$stored_necromancer.attacks_left
