--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -89,7 +89,7 @@
         id=Gruth
         name= _ "Gruth"
         canrecruit=yes
-        overlays="misc/leader-expendable.png"
+        overlay="misc/leader-expendable.png"
 
         team_name=undead
         user_team_name=_"Undead"
@@ -104,7 +104,7 @@
             id=Gerd
             name=_ "Gerd"
             canrecruit=yes
-            overlays="misc/leader-expendable.png"
+            overlay="misc/leader-expendable.png"
             x,y=11,26
         [/unit]
         [ai]
