--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -320,11 +320,11 @@
             id=Minister Hylas
         [/kill]
 
-        {MODIFY_UNIT (id=Sir Gerrick) overlays ""}
+        {MODIFY_UNIT (id=Sir Gerrick) overlay ""}
         {MODIFY_UNIT (id=Sir Gerrick) canrecruit yes}
         {MODIFY_UNIT (id=Sir Gerrick) ellipse ""}
 
-        {MODIFY_UNIT (id=Urza Afalas) overlays "misc/loyal-icon.png"}
+        {MODIFY_UNIT (id=Urza Afalas) overlay "misc/loyal-icon.png"}
         {MODIFY_UNIT (id=Urza Afalas) ellipse ""}
 
         [message]
