replace overlays by overlay

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -390,7 +390,7 @@
             x,y=18,8
         [/recall]
 
-        {MODIFY_UNIT (id=Minister Hylas) overlays "misc/loyal-icon.png"}
+        {MODIFY_UNIT (id=Minister Hylas) overlay "misc/loyal-icon.png"}
         {MODIFY_UNIT (id=Minister Hylas) ellipse ""}
 
         [message]
@@ -666,7 +666,7 @@
             [modifications]
                 {TRAIT_LOYAL}
             [/modifications]
-            overlays="misc/loyal-icon.png"
+            overlay="misc/loyal-icon.png"
         )}
         {UNIT 1 (White Mage) 9 2 (
             generate_name=yes
@@ -675,7 +675,7 @@
             [modifications]
                 {TRAIT_LOYAL}
             [/modifications]
-            overlays="misc/loyal-icon.png"
+            overlay="misc/loyal-icon.png"
         )}
     [/event]
 
