--- a/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
@@ -365,7 +365,7 @@
             [filter]
                 id=Grak,Zur
             [/filter]
-            overlays=misc/loyal-icon.png~GS()
+            overlay=misc/loyal-icon.png~GS()
         [/modify_unit]
 
         [message]
