replace overlays by overlay

--- a/data/ai/micro_ais/scenarios/messenger_escort.cfg
+++ b/data/ai/micro_ais/scenarios/messenger_escort.cfg
@@ -74,7 +74,7 @@
             side=2
             x,y=30,27
             random_traits=no
-            overlays=misc/hero-icon.png
+            overlay=misc/hero-icon.png
         [/unit]
         {NOTRAIT_UNIT 2 Dragoon 30 26}
         [unit]
