replace overlays by overlay

--- a/data/ai/micro_ais/scenarios/protect_unit.cfg
+++ b/data/ai/micro_ais/scenarios/protect_unit.cfg
@@ -111,7 +111,7 @@
             side=1
             x,y=20,9
             upkeep=loyal
-            overlays=misc/hero-icon.png
+            overlay=misc/hero-icon.png
         [/unit]
 
         # Goal signpost for Rossauba
