use overlay instead of overlays for hero-icon

--- a/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
+++ b/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
@@ -623,19 +623,6 @@
             [filter]
                 id=Caladon
             [/filter]
-            variable=Caladon_stored
-        [/store_unit]
-
-        [remove_unit_overlay]
-            x=$Caladon_stored.x
-            y=$Caladon_stored.y
-            image=misc/hero-icon.png
-        [/remove_unit_overlay]
-
-        [store_unit]
-            [filter]
-                id=Caladon
-            [/filter]
             kill=yes
             variable=Caladon_stored
         [/store_unit]
@@ -643,6 +630,7 @@
         {VARIABLE Caladon_stored.side 4}
         {VARIABLE Caladon_stored.canrecruit yes}
         {VARIABLE Caladon_stored.ellipse ""}
+        {VARIABLE Caladon_stored.overlay ""}
         # He is not going to recruit, but summon guardians each
         # turn. Still, he needs this variable set to get a crown icon,
         # and to show up in the status table.
