use overlay instead of overlays

--- a/data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg
+++ b/data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg
@@ -127,14 +127,13 @@
             name=Tyegea_stored.side
             value=1
         [/set_variable]
+        [set_variable]
+            name=Tyegea_stored.overlay
+            value="misc/loyal-icon.png"
+        [/set_variable]
         [unstore_unit]
             variable=Tyegea_stored
         [/unstore_unit]
-        [unit_overlay]
-            x=$Tyegea_stored.x
-            y=$Tyegea_stored.y
-            image=misc/loyal-icon.png
-        [/unit_overlay]
         [clear_variable]
             name=Tyegea_stored
         [/clear_variable]
