--- a/data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg
+++ b/data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg
@@ -156,16 +156,10 @@
             [/filter]
             variable=Cylanna_stored
         [/store_unit]
-        [remove_unit_overlay]
-            x=$Cylanna_stored.x
-            y=$Cylanna_stored.y
-            image=misc/hero-icon.png
-        [/remove_unit_overlay]
-        [unit_overlay]
-            x=$Cylanna_stored.x
-            y=$Cylanna_stored.y
-            image=misc/loyal-icon.png
-        [/unit_overlay]
+        [set_variable]
+            name=Cylanna_stored.overlay
+            value="misc/loyal-icon.png"
+        [/set_variable]
         [clear_variable]
             name=Cylanna_stored
         [/clear_variable]
