--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -327,10 +327,7 @@
         # wmllint: recognize Jarl
 
         # put hero icon on troll/dwarf ally
-        [unit_overlay]
-            id=$ally_name
-            image=misc/hero-icon.png
-        [/unit_overlay]
+        {MODIFY_UNIT (id=$ally_name) overlay "misc/hero-icon.png"}
 
         # initialize starting variables
 
@@ -2839,10 +2836,7 @@
 
             # remove hero icon from troll/dwarf ally
 
-            [remove_unit_overlay]
-                id=$ally_name
-                image=misc/hero-icon.png
-            [/remove_unit_overlay]
+            {MODIFY_UNIT (id=$ally_name) overlay ""}
         [/event]
     [/event]
 
