--- a/data/campaigns/Liberty/scenarios/08_Glory.cfg
+++ b/data/campaigns/Liberty/scenarios/08_Glory.cfg
@@ -323,10 +323,7 @@
         {UNMAKE_HERO Harper}
 
         # He's still a loyal unit with dialogue when he dies
-        [unit_overlay]
-            id=Harper
-            image=misc/loyal-icon.png
-        [/unit_overlay]
+        {MODIFY_UNIT (id=Harper) overlay "misc/loyal-icon.png"}
 
         [message]
             speaker=Baldras
