use overlay instead of overlays

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -567,17 +567,8 @@
 
         {CLEAR_VARIABLE krash_flies_away}
 
-        # Remove loyalty overlay
-        [remove_unit_overlay]
-            id=Krash
-            image=misc/loyal-icon.png
-        [/remove_unit_overlay]
 
-        # Give expendable overlay
-        [unit_overlay]
-            id=Krash
-            image=misc/leader-expendable.png
-        [/unit_overlay]
+        {MODIFY_UNIT (id=Krash) overlay "misc/leader-expendable.png"}
 
         [move_unit_fake]
             type=Drake Burner
