--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -325,17 +325,8 @@
                     y=$eryssa_starts_at.y
                 [/recall]
 
-                # Remove loyalty overlay
-                [remove_unit_overlay]
-                    id=Eryssa
-                    image=misc/loyal-icon.png
-                [/remove_unit_overlay]
-
-                # Give expendable overlay
-                [unit_overlay]
-                    id=Eryssa
-                    image=misc/leader-expendable.png
-                [/unit_overlay]
+     
+                {MODIFY_UNIT (id=Eryssa) overlay "misc/leader-expendable.png"}
 
                 [store_unit]
                     [filter]
