--- a/data/campaigns/Northern_Rebirth/utils/utils.cfg
+++ b/data/campaigns/Northern_Rebirth/utils/utils.cfg
@@ -87,16 +87,7 @@
                 [/filter]
                 canrecruit=yes
             [/modify_unit]
-            # Remove loyalty overlay
-            [remove_unit_overlay]
-                id=Krash
-                image=misc/loyal-icon.png
-            [/remove_unit_overlay]
-            # Give expendable overlay
-            [unit_overlay]
-                id=Krash
-                image=misc/leader-expendable.png
-            [/unit_overlay]
+            {MODIFY_UNIT (id=Krash) overlay "misc/leader-expendable.png"}
         [/then]
     [/if]
     {CLEAR_VARIABLE krash,start_loc}
