use overlay instead of overlays

--- a/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
@@ -596,10 +596,7 @@
             message= _ "Well, now we are in the caves again! Come on, back south, to the city."
         [/message]
         {UNMAKE_HERO Baglur}
-        [unit_overlay]
-            id=Baglur
-            image=misc/loyal-icon.png
-        [/unit_overlay]
+        {MODIFY_UNIT (id=Baglur) overlay "misc/loyal-icon.pngg"}
         {CLEAR_VARIABLE thur_x,thur_y}
         [endlevel]
             result=victory
