--- a/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
@@ -596,7 +596,7 @@
             message= _ "Well, now we are in the caves again! Come on, back south, to the city."
         [/message]
         {UNMAKE_HERO Baglur}
-        {MODIFY_UNIT (id=Baglur) overlay "misc/loyal-icon.pngg"}
+        {MODIFY_UNIT (id=Baglur) overlay "misc/loyal-icon.png"}
         {CLEAR_VARIABLE thur_x,thur_y}
         [endlevel]
             result=victory
