--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -155,7 +155,7 @@
 				{LINK_TAG "units/unit_type/extra_anim"}
 			[/case]
 			[case]
-				value=image_mod,overlay
+				value=image_mod,overlays
 				{SIMPLE_KEY replace string}
 				{SIMPLE_KEY add string}
 				{LINK_TAG "game_config/color_range"}
@@ -164,6 +164,10 @@
 			[case]
 				value=ellipse
 				{SIMPLE_KEY ellipse string}
+			[/case]
+            [case]
+				value=overlay
+				{SIMPLE_KEY overlay string}
 			[/case]
 			[case]
 				value=halo
