Loyal units always get the ring overlay, fix #4058

--- a/data/core/macros/deprecated-utils.cfg
+++ b/data/core/macros/deprecated-utils.cfg
@@ -164,7 +164,6 @@ _"No gold carried over to the next scenario."#enddef
             {TRAIT_UNDEAD}
             {TRAIT_LOYAL}
         [/modifications]
-        overlays="misc/loyal-icon.png"
     [/unit]
 #enddef
 
@@ -453,4 +452,9 @@ _"No gold carried over to the next scenario."#enddef
     # This can be used in mid-movement events (enter_hex and exit_hex) to cause
     # no interruption of movement, yet prevent the move from being undone.
     {DEPRECATE_ACTION_MACRO "NO_INTERRUPT_NO_UNDO" 3 "1.16" ""}
+#enddef
+
+#define IS_LOYAL
+    #deprecated 3 1.15 This used to be used to add a visual overlay for loyal units.
+    #deprecated 3 1.15 It's no longer needed, since all loyal units now get that overlay.
 #enddef
