--- a/data/core/macros/image-utils.cfg
+++ b/data/core/macros/image-utils.cfg
@@ -21,11 +21,6 @@
     ellipse="misc/ellipse-hero"
 #enddef
 
-#define IS_LOYAL
-    # Embed this into a unit declaration to add a loyalty icon to the unit.
-    overlays="misc/loyal-icon.png"
-#enddef
-
 #define IS_EXPENDABLE_LEADER
     # Embed this into a unit declaration to add an expendable leader icon to the unit.
     overlays="misc/leader-expendable.png"
@@ -189,7 +184,7 @@
 
         [effect]
             apply_to=ellipse
-            ellipse="misc/ellipse-hero"
+            ellipse="misc/ellipse-hero.png"
         [/effect]
     [/object]
 #enddef
