--- a/data/core/units/bats/Bat_Dread.cfg
+++ b/data/core/units/bats/Bat_Dread.cfg
@@ -4,7 +4,7 @@
     name= _ "Dread Bat"
     race=bats
     image="units/undead/dreadbat-se-3.png"
-    profile="portraits/monsters/bat-red.png~CS(-50,5,15)"
+    profile="portraits/monsters/bat-dread.png"
     {TRAIT_FERAL_MUSTHAVE}
     hitpoints=33
     movement_type=smallfly
