SotA: Simplfy bat handling for the ship & for change level compatability

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
@@ -333,7 +333,7 @@ of Healing"
 
         # Choose a bat off the recall list if there is one.
         [role]
-            type=SotA Blood Bat, SotA Vampire Bat  # A Dread Bat would be too powerful.
+            type=Blood Bat, Vampire Bat  # A Dread Bat would be too powerful.
             search_recall_list=yes
             role=hiding_bat
         [/role]
@@ -354,7 +354,7 @@ of Healing"
             [/then]
             [else]
                 [unit]
-                    type=SotA Vampire Bat
+                    type=Vampire Bat
                     x, y=1, 1
                 [/unit]
                 [store_unit]
@@ -421,7 +421,7 @@ of Healing"
         [if]
             [variable]
                 name=frightened_bat.type
-                equals=SotA Vampire Bat
+                equals=Vampire Bat
             [/variable]
             [then]
                 [set_variable]
@@ -535,7 +535,7 @@ of Healing"
                             [/then]
                             [else]
                                 [unit]
-                                    type=SotA Vampire Bat
+                                    type=Vampire Bat
                                     x, y=$bat_x, $bat_y
                                     moves=0
                                 [/unit]
@@ -928,6 +928,7 @@ Well, I might as well do my experiment and worry about leaving later."
         [/message]
     [/event]
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
 
