--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
@@ -253,6 +253,7 @@ The journey started well enough, but on the dawn following our departure, the wi
     [/event]
 
     # *************************** PLAY ***************************
+
 #define MOVE_TO_LOWER_DECK X Y
     [move_unit]
         x,y={X},{Y}
@@ -648,6 +649,7 @@ The journey started well enough, but on the dawn following our departure, the wi
     [/event]
 
     {HERO_DEATHS}
+    {TRANSFORM_BATS_FOR_SHIP}
     {ZOMBIES}
     {MANAGE_PROFILE}
 
