--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
@@ -211,6 +211,7 @@ When the captain retained his memories, I reasoned that it may have been because
     [/event]
 
     # *************************** PLAY ***************************
+
     # The next two events control the ability of side 2 to recruit a level-2 unit.
     [event]
         name=side 2 turn
@@ -431,6 +432,7 @@ When the captain retained his memories, I reasoned that it may have been because
     [/event]
 
     {HERO_DEATHS}
+    {TRANSFORM_BATS_FOR_SHIP}
     {ZOMBIES}
     {MANAGE_PROFILE}
 
