--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
@@ -464,6 +464,7 @@ After several days of travel, he approached the frontier town of Carcyn."
     [/event]
 
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {KIDS_ADVANCE}
 [/scenario]
