--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
@@ -90,8 +90,6 @@ My primary objective was met, and I had been able to press a number of ghosts in
 
     # *************************** PRESTART ***************************
 
-    {SIDE_1_ARDONNA:TRANSFROM_BATS_TO_NORMAL_EVENT}
-
     [event]
         name=prestart
 
@@ -391,6 +389,7 @@ My primary objective was met, and I had been able to press a number of ghosts in
     [/event]
 
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
 
