--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -26,7 +26,7 @@
 
 #define SIDE_1_ARDONNA_EARLY
     {SIDE_1_ARDONNA_BASE}
-    recruit=SotA Vampire Bat
+    recruit=Vampire Bat
 #enddef
 
 #define SIDE_1_RAS-TABAHN
@@ -1054,29 +1054,48 @@
     [/set_menu_item]
 #enddef
 
-# this is inserted in some scenarios to clear SotA Bats from older saves
-# it needs to be in all scenarios which use SIDE_1_ARDONNA, otherwise the player
-# may be able to recruit normal and SotA bats, or be able to recruit bats when
-# he plays someone who should not be able to do so
-#define SIDE_1_ARDONNA:TRANSFROM_BATS_TO_NORMAL_EVENT
-    # SotA bats were necessary for the ship where they were drawn behind the
-    # rigging, but not in later scenarios.
+# This is inserted in scenarios with the ship, so the bats will show properly underneath the ship rigging.
+# Covers recruit, recall, and debug created units
+#define TRANSFORM_BATS_FOR_SHIP
+    [event]
+        name=unit placed
+        first_time_only=no
+        [filter]
+            type=Vampire Bat,Blood Bat,Dread Bat
+        [/filter]
+        [switch]
+            variable=unit.type
+            [case]
+                value=Vampire Bat
+                [transform_unit]
+                    id=$unit.id
+                    transform_to=SotA Vampire Bat
+                [/transform_unit]
+            [/case]
+            [case]
+                value=Blood Bat
+                [transform_unit]
+                    id=$unit.id
+                    transform_to=SotA Blood Bat
+                [/transform_unit]
+            [/case]
+            [case]
+                value=Dread Bat
+                [transform_unit]
+                    id=$unit.id
+                    transform_to=SotA Dread Bat
+                [/transform_unit]
+            [/case]
+        [/switch]
+    [/event]
+#enddef
+
+#define MAKE_BATS_NORMAL
+    # Make sure bats are turned back to normal. Inserted on all non-ship levels so debug change level will work correctly
     [event]
         name=prestart
-
-        # First, we'll make sure newly recruited ones will be correct
-        [disallow_recruit]
-            side=1
-            type=SotA Vampire Bat
-        [/disallow_recruit]
-        [allow_recruit]
-            side=1
-            type=Vampire Bat
-        [/allow_recruit]
-
-        # Now the type of all bats on the recall list is changed
         [lua]
-            code = <<
+            code=<<
                 for i, u in ipairs(wesnoth.get_recall_units { type = 'SotA Vampire Bat, SotA Blood Bat, SotA Dread Bat' }) do
                     if u.type == 'SotA Vampire Bat' then
                         u:transform('Vampire Bat')
