--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -129,7 +129,7 @@ With further observation, I have determined that this is probably not the way to
     # *************************** MACROS ***************************
 #define PLACE_BAT X Y TRAIT1
     [unit]
-        type=SotA Vampire Bat
+        type=Vampire Bat
         x={X}
         y={Y}
         side=1
@@ -366,6 +366,7 @@ With further observation, I have determined that this is probably not the way to
 
     {HERO_DEATHS}
     {MANAGE_PROFILE}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
 
 #undef PLACE_WOLF
