--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
@@ -117,8 +117,6 @@ I was so sure I had the answer! I was wrong. I wanted to believe that I was imag
 
     # *************************** PRESTART ***************************
 
-    {SIDE_1_ARDONNA:TRANSFROM_BATS_TO_NORMAL_EVENT}
-
     [event]
         name=prestart
         {RECALL_LOYAL_UNITS}
@@ -606,6 +604,7 @@ I was so sure I had the answer! I was wrong. I wanted to believe that I was imag
     [/event]
 
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
 
