--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -88,8 +88,6 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
 
     # *************************** PRESTART ***************************
 
-    {SIDE_1_ARDONNA:TRANSFROM_BATS_TO_NORMAL_EVENT}
-
     [event]
         name=prestart
 
@@ -265,6 +263,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
     [/event]
 
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
 [/scenario]
