--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/15_Mountain_Pass.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/15_Mountain_Pass.cfg
@@ -406,6 +406,7 @@ We have reached a pass through the mountains that Ras-Tabahn knew of. The air is
     [/event]
 
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
