--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/20_North_Knalga.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/20_North_Knalga.cfg
@@ -816,6 +816,7 @@ We left the fires of the mountain behind and plunged once more into darkness. Af
     {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
+    {MAKE_BATS_NORMAL}
     {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
